--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,7 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:29.0.0'
     implementation 'com.android.support:cardview-v7:29.0.0'
     implementation 'com.android.support:design:29.0.0'
+
+    implementation 'androidx.paging:paging-runtime:2.1.0'
+
 }
